# evocore

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: ga-quality-gap-root-cause.md
docs/site/: api.md  ask-tell-engines.md  budget-aware-optimization.md  callbacks-checkpointing.md  cmaes.md  de.md  examples.md  expensive-external-evaluations.md  ga-benchmark-parity.md  ga.md  gene-space.md  index.md  install.md  mixed-variable-search.md  operator-contract.md  optimizer-telemetry.md  parallelism.md  quickstart.md  release.md
evocore/: __init__.py  _core.pyi  advisors.py  batches.py  callbacks.py  cmaes.py  evaluation.py  ga.py  gene_space.py  individual.py  mixed_cma.py  operators.py  parallel.py  policies.py  protocols.py  scheduler.py  stats.py
evocore/callbacks/: __init__.py  base.py  checkpointing.py  metrics.py  progress.py  stopping.py
evocore/core/: __init__.py  errors.py  parallel.py  serialization.py
evocore/lifecycle/: __init__.py  archives.py  ask_tell_helpers.py  batches.py  checkpointing.py  composition.py  conversion.py  events.py  external.py  policies.py  protocols.py  records.py  scheduler.py  selection.py  stopping.py  telemetry.py
evocore/optimizers/: __init__.py  config.py  operators.py
evocore/results/: __init__.py  checkpointing.py  generation.py  reproducibility.py  run.py
evocore/search_space/: __init__.py  codec.py  constraints.py  genes.py  projection.py  solutions.py  transforms.py
evocore/surrogates/: __init__.py  inverse_distance.py  scoring.py
examples/: budgeted_de.py  cmaes_rosenbrock.py  mixed_gene_space.py  onemax_binary.py  sphere_optimization.py  vnext_budgeted_ga.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: candidate.rs  cmaes.rs  de.rs  gene_codec.rs  gene_spec.rs  individual.rs  lib.rs  parallel.rs  reproduce.rs  selection.rs  utils.rs
src/operators/: binary_ops.rs  float_ops.rs  int_ops.rs  mod.rs
tests/: vnext_helpers.py
tests/benchmarks/: bench_ga_vs_deap.py  bench_parallel_scaling.py  bench_vnext_multifidelity.py
tests/fixtures/: __init__.py
tests/integration/: test_binary_onemax.py  test_cmaes_rosenbrock.py  test_de_mixed_gene_space.py  test_mixed_gene_space.py  test_phase3_expensive_projection_recipe.py  test_rastrigin.py  test_sphere_function.py
tests/property/: test_gene_space_properties.py  test_integer_margin_properties.py  test_operator_contract_properties.py  test_operator_properties.py  test_optimizer_config_properties.py  test_projection_properties.py  test_result_export_properties.py
tests/unit/: test_ask_tell_checkpointing.py  test_callbacks.py  test_checkpoint_golden_fixtures.py  test_checkpointing.py  test_cmaes_ask_tell_checkpointing.py  test_cmaes_ask_tell_vnext.py  test_cmaes_engine.py  test_cmaes_external_state.py  test_cmaes_projection.py  test_cmaes_restarts.py  test_cmaes_rust.py  test_constraints_penalty.py  test_de_ask_tell.py  test_de_checkpointing.py  test_de_engine.py  test_de_external_state.py  test_de_jde.py  test_de_kernel_adapter.py  test_de_multi_run.py  test_de_rust_kernel.py  test_de_strategies.py  test_de_strategy_metadata_contract.py  test_domain_imports.py  test_exceptions.py  (+38 more)
(+132 files in other folders)
