[package]
name = "evocore"
version = "0.10.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rayon = "1.9"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
