[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "evocore"
version = "0.5.0"
requires-python = ">=3.11"
description = "Rust-native Genetic Algorithms and CMA-ES for Python"

[tool.maturin]
python-source = "."
module-name = "evocore._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
