[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "evocore"
version = "0.8.0"
requires-python = ">=3.11"
description = "Rust-native Genetic Algorithms and CMA-ES for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Murfidar" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "maturin>=1.5,<2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26",
    "pandas>=2.2.2",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Homepage = "https://github.com/Murfidar/evocore"
Repository = "https://github.com/Murfidar/evocore"
Issues = "https://github.com/Murfidar/evocore/issues"

[tool.maturin]
python-source = "."
module-name = "evocore._core"
features = ["pyo3/extension-module"]
include = ["evocore/py.typed", "evocore/_core.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN204",
    "ARG002",
    "B905",
    "C901",
    "COM812",
    "D100",
    "D104",
    "D105",
    "D107",
    "E501",
    "EM101",
    "EM102",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF401",
    "PLC0415",
    "PLR2004",
    "PLR0913",
    "PTH103",
    "PTH110",
    "PTH112",
    "PTH118",
    "PTH120",
    "PTH123",
    "PTH208",
    "RUF046",
    "S301",
    "SLF001",
    "T201",
    "TC001",
    "TC003",
    "TRY003",
    "ANN201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["ANN", "D", "INP001", "T201"]
"tests/**/*.py" = ["ANN", "D", "PLR2004", "S101"]
"tests/benchmarks/**/*.py" = ["T201"]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_*"
test-command = "python -c \"import evocore; assert isinstance(evocore.__version__, str); print(evocore.__version__)\""
